log
Fri, Mar 28, 2025  9:08:04 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Fri, Mar 28, 2025  9:09:13 PM: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
113c748
Fri, Mar 28, 2025  9:18:06 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4367e9e
Fri, Mar 28, 2025  9:23:02 PM: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4511bc9
Fri, Mar 28, 2025  9:24:10 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
98f4249
Fri, Mar 28, 2025  9:32:02 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
92cf6df
Fri, Mar 28, 2025  9:54:33 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fe83e99
Fri, Mar 28, 2025  9:56:59 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
05c7b76
Fri, Mar 28, 2025  9:59:57 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
af36bdb
Fri, Mar 28, 2025 10:16:38 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
59b0e71
Fri, Mar 28, 2025 10:22:51 PM: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
dbdceba
Fri, Mar 28, 2025 10:26:58 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
28319c6
Fri, Mar 28, 2025 10:53:46 PM: 
 list.c | 26 ++++++++++++++++++++++----
 1 file changed, 22 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:116:39: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL) return NULL;
                                       ^~~~
list.c:113:6: note: declared here
 void pushCurrent(List * list, void * data)
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5cbe7f2
Fri, Mar 28, 2025 11:45:22 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
0d4dcac
Fri, Mar 28, 2025 11:59:52 PM: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:152:33: error: 'return' with no value, in function returning non-void [-Werror]
     if (list->current == NULL ) return;
                                 ^~~~~~
list.c:150:8: note: declared here
 void * popCurrent(List * list)
        ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9ad0922
Sat, Mar 29, 2025 12:09:16 AM: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
3ec4c6c
Sat, Mar 29, 2025 12:19:21 AM: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  12|0
total_score: 70/70
f00da02
